deleted one project.

--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
         <div class="w-5/6 sm:w-3/4 ml-auto mr-auto ">
            
             <!--<a class="w-5/6 sm:w-3/4" href=""><img class="transform hover:scale-95 duration-100 ease-linear" src="" alt=""></a>-->
-            <a class="w-5/6 sm:w-3/4" href="https://0kuzma.github.io/pets/"><img class="object-cover w-full h-32 md:w-full md:h-60 xl:w-full xl:h-96 transform hover:scale-95 duration-100 ease-linear" src="./img/projectimg-pets.jpg" alt="levrier"></a>
+
+            <!--<a class="w-5/6 sm:w-3/4" href=""><img class="object-cover w-full h-32 md:w-full md:h-60 xl:w-full xl:h-96 transform hover:scale-95 duration-100 ease-linear" src=""" alt=""></a>-->
             <a class="w-5/6 sm:w-3/4" href="./projet/"><img class="object-cover w-full h-32 md:w-full md:h-60 xl:w-full xl:h-96 transform hover:scale-95 duration-100 ease-linear" src="./img/imgbateau1.jpg" alt="bateauwiki"></a>
             
         </div>
